JSON data extraction JS implemented.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,25 @@
         <form class="" id="sections-form" action="#" method="post">
             <h2>Choose a section:</h2>
             <select id="sections" name="sections">
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+                <option value="0">Select...</option>
+                <option value="home">Home</option>
+                <option value="opinion">Opinion</option>
+                <option value="world">World</option>
+                <option value="national">National</option>
+                <option value="politics">Politics</option>
+                <option value="business">Business</option>
+                <option value="technology">Technology</option>
+                <option value="science">Science</option>
+                <option value="sports">Sports</option>
+                <option value="arts">Arts</option>
+                <option value="food">Food</option>
+                <option value="travel">Travel</option>
             </select>
         </form>
     </header>
 
     <main>
-
+        <ul class="newsItems"></ul>
     </main>
 
     <footer>
