Folder structure reorganization.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="seo-description">Instanews</h1>
     <header>
-        <img src="images/nyt-logo.svg" alt="Image of New York Times logo">
+        <img src="assets/images/nyt-logo.svg" alt="Image of New York Times logo">
 
         <form class="" id="sections-form" action="#" method="post">
             <h2>Choose a section:</h2>
