Initial implementation of news item population to index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     </header>
 
     <main>
-        <ul class="newsItems"></ul>
+        <section class="newsItems">
+
+
+        </section>
     </main>
 
     <footer>
