Loading spinner added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <main>
         <section class="newsItems">
+            <img src="assets/images/ajax-loader.gif" class="loading" alt="Placeholder image of data loading">
         </section>
     </main>
 
