--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="seo-description">Instanews</h1>
     <header>
-        <img src="assets/images/nyt-logo.svg" alt="Image of New York Times logo">
+        <img class="logo" src="assets/images/nyt-logo.svg" alt="Image of New York Times logo">
 
         <form class="" id="sections-form" action="#" method="post">
             <h2>Choose a section:</h2>
@@ -33,7 +33,7 @@
 
     <main>
         <section class="newsItems">
-            <img src="assets/images/ajax-loader.gif" class="loading" alt="Placeholder image of data loading">
+            <img class="loadingImage" src="assets/images/ajax-loader.gif" alt="Placeholder image of data loading">
         </section>
     </main>
 
