Responsive design for tablet and desktop implemented.  Conditional css manipulation for changing screen sizes added.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img class="logo" src="assets/images/nyt-logo.svg" alt="Image of New York Times logo">
 
-        <form class="" id="sections-form" action="#" method="post">
+        <form class="sections-form" id="sections-form" action="#" method="post">
             <h2>Choose a section:</h2>
             <select id="sections" name="sections">
                 <option value="0">Select...</option>
