--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Instanews</title>
+    <title>Instanews - NYT News Reader</title>
     <link href="build/css/style.min.css" rel="stylesheet">
 </head>
 <body>
