Removed title attribute from news item html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </header>
 
         <main>
+            <!--<img class="loadingImage" src="assets/images/ajax-loader.gif" alt="Placeholder image of data loading">-->
+
             <section class="newsItems">
                 <img class="loadingImage" src="assets/images/ajax-loader.gif" alt="Placeholder image of data loading">
             </section>
