CSS class and id names refactored

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         </header>
 
         <main>
-            <img class="loadingImage" src="assets/images/ajax-loader.gif" alt="Placeholder image of data loading">
-            <section class="newsItems">
+            <img class="loading-image" src="assets/images/ajax-loader.gif" alt="Placeholder image of data loading">
+            <section class="news-items">
+                <h2>News Items</h2>
             </section>
         </main>
 
