--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </header>
 
         <main>
+            changesss!
             <img class="loading-image" src="assets/images/ajax-loader.gif" alt="Placeholder image of data loading">
             <section class="news-items">
                 <h2>News Items</h2>
