changes for justin html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <form class="sections-form" id="sections-form" action="#" method="post">
                 <h2>Choose a section:</h2>
                 <select class="form-dropdown" id="sections" name="sections">
-                    <option value="0">Select...</option>
+                    <option value="" disabled selected>Select...</option>
                     <option value="home">Home</option>
                     <option value="opinion">Opinion</option>
                     <option value="world">World</option>
@@ -32,7 +32,7 @@
         </header>
 
         <main>
-            changesss!
+        
             <img class="loading-image" src="assets/images/ajax-loader.gif" alt="Placeholder image of data loading">
             <section class="news-items">
                 <h2>News Items</h2>
